--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,16 @@ margin-top: 8px;
 
 *{box-sizing: border-box;}
 
-@media only screen and (max-width: 800px) {
-  img {flex-basis: 50% ;}
-
-@media only screen and (max-width: 600px) 
+@media only screen and (max-width: 800px)
+ {
+  img 
+  {
+    /* flex-basis: 50% ; */
+    max-width:50%;
+  }
+ }
+@media only screen and (max-width: 600px) {
+  img{
+    max-width: 100%;
+  }
+}
